<resources>
    <string name="app_name">ControlProcesosAdministrativos</string>
    <string name="usuario">usuario</string>
    <string name="contrase_a">contraseña</string>
    <string name="entrar">ENTRAR</string>
    <string name="paginaazul">paginaazul</string>
    <string name="salir">Salir</string>
    <string name="control_de_procesos_administrativos">CONTROL DE PROCESOS ADMINISTRATIVOS</string>
    <string name="agregar">Agregar</string>
    <string name="codigo_de_la_carrera">Codigo de la carrera</string>
    <string name="limpiar">Limpiar</string>

    <string name="nombre_de_la_carrera">Nombre de la carrera</string>
    <string name="eliminar">Eliminar</string>
    <string name="todo">TODO</string>
    <string name="editar">EDITAR</string>
    <string name="sin_resultado">Sin resultado</string>

    <string name="resultado">Resultado:</string>
    <string name="buscar">BUSCAR</string>
</resources>