<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CareerActivities.CareerAddActivity">

    <EditText
        android:id="@+id/careerAdd_txt"
        android:layout_width="356dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/nombre_de_la_carrera"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/careerCode_txt"
        android:autofillHints="" />

    <EditText
        android:id="@+id/careerCode_txt"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/codigo_de_la_carrera"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:autofillHints="" />

    <Button
        android:id="@+id/careerAdd_btn"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:onClick="AddCareerView"
        android:text="@string/agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/careerAdd_txt"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="162dp"
        android:layout_height="176dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/carrera"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/careerClean_btn"
        android:layout_width="134dp"
        android:layout_height="61dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:onClick="clean"
        android:text="@string/limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toEndOf="@+id/careerAdd_btn"
        app:layout_constraintTop_toBottomOf="@+id/careerAdd_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>