<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="233dp"
        android:layout_height="199dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/login" />

    <EditText
        android:id="@+id/usuario_txt"
        android:layout_width="345dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:text="fran001"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="345dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario_txt"
        tools:text="paginaazul" />

    <Button
        android:id="@+id/entrar_btn"
        android:layout_width="345dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="#3F51B5"
        android:onClick="login"
        android:text="@string/entrar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_txt"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="346dp"
        android:layout_height="53dp"
        android:background="#2196F3"
        android:onClick="registrar"
        android:text="REGISTRAR"
        android:textColor="#FBFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrar_btn"
        app:layout_constraintVertical_bias="0.231" />
</androidx.constraintlayout.widget.ConstraintLayout>