<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CourseActivities.CourseSearchActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="187dp"
        android:layout_height="161dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asignatura" />

    <Button
        android:id="@+id/searchCourse_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="getCourse"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCourse_txt" />

    <EditText
        android:id="@+id/searchCourse_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="Buscar"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="199dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCourse_btn">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/searchCodeCourse_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sin_resultado"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/searchCourse_text"
            android:layout_width="349dp"
            android:layout_height="29dp"
            android:layout_marginTop="12dp" />

        <TextView
            android:id="@+id/searchCourseCareer_text"
            android:layout_width="350dp"
            android:layout_height="32dp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>