<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/titulo_login_text2"
        android:layout_width="327dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/control_de_procesos_administrativos"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="233dp"
        android:layout_height="199dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/login" />

    <EditText
        android:id="@+id/usuarioR_txt"
        android:layout_width="359dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_login_text2" />

    <EditText
        android:id="@+id/emailR_txt"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="correo"
        android:inputType="textPassword|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuarioR_txt" />

    <EditText
        android:id="@+id/passwordR_txt"
        android:layout_width="352dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailR_txt" />

    <Button
        android:id="@+id/button"
        android:layout_width="348dp"
        android:layout_height="49dp"
        android:background="#3F51B5"
        android:onClick="register"
        android:text="REGISTRAR"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordR_txt"
        app:layout_constraintVertical_bias="0.194" />
</androidx.constraintlayout.widget.ConstraintLayout>